--- a/TopMusic/app/src/main/res/values/colors.xml
+++ b/TopMusic/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#b0bec5</color>
+    <color name="colorPrimaryDark">#808e95</color>
+    <color name="colorAccent">#0d47a1</color>
+
+    <color name="cardBackground">#f5f5f5</color>
+
 </resources>
