--- a/QuakeRadar/app/src/main/res/menu/menu_main.xml
+++ b/QuakeRadar/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="bo.com.cognos.quakeradar.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_lastHour"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/last_hour"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_lastDay"
+        android:orderInCategory="100"
+        android:title="@string/last_day"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_lastWeek"
+        android:orderInCategory="100"
+        android:title="@string/last_week"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_lastMonth"
+        android:orderInCategory="100"
+        android:title="@string/last_month"
+        app:showAsAction="never" />
+
 </menu>
