--- a/QuakeRadar/app/src/main/res/layout/activity_main.xml
+++ b/QuakeRadar/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,12 @@
             android:layout_height="wrap_content"
             android:icon="@drawable/ic_map" />
 
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_star" />
+
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
